--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
+body {
+    background-color: #f8f9fa; 
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.changing {
+    background-color: #f8f9fa !important; 
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.navbar-brand {
+    color: black; 
+    font-size: 1.5rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.navbar-nav .nav-link {
+    color: black; 
 }
 
-.App-link {
-  color: #61dafb;
+.navbar-nav .nav-link:hover {
+    color: #c0c0c0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar-toggler-icon {
+    background-color: #fff; 
 }
+
+.navbar-collapse {
+    justify-content: flex-end;
+}
+  
+@media (max-width: 768px) {
+    .navbar-nav {
+        background-color: #f8f9fa; 
+        padding-top: 10px;
+    }
+
+    .navbar-nav .nav-item {
+        border-bottom: 1px solid #ffffff; 
+    }
+
+    .navbar-toggler {
+        background-color: #ffffff;
+    }
+
+    .navbar-collapse {
+        background-color: #f8f9fa; 
+        padding: 10px;
+    }
+}
+
+  
