--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,26 @@
   .navbar-toggler-icon {
     background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(0, 0, 0, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e"); /* Navbar toggler ikonu */
   }
+
+  
+  .navbar-nav .nav-link {
+    position: relative; 
+  }
+  
+  .navbar-nav .nav-link::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    height: 2px;
+    background-color: black;
+    transition: width 0.3s ease-in-out; 
+  }
+  
+  .navbar-nav .nav-link:hover::after {
+    width: 100%; 
+  }
   
   @media (max-width: 992px) {
     .navbar-nav {
