--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,10 @@
   .dropdown-item:hover {
     background-color: #e9ecef; 
   }
+
+  .dropdown-item:target{
+    background-color: #c0c0c0;
+  }
   
 
   .navbar-toggler {
