--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-/* Navbar */
 .navbar {
     background-color: #f8f9fa; 
     padding: 20px 0; 
@@ -19,14 +18,14 @@
   
   .navbar-nav .nav-link:hover {
     color: #c0c0c0; 
-  }
-  
+  } 
 
   .dropdown-menu {
     background-color: #f8f9fa; 
     text-decoration: none; 
     position: relative; 
     overflow: hidden; 
+    border: none;
   }
   
   .dropdown-item {
@@ -56,6 +55,11 @@
     color: #c0c0c0;
   }
 
+  .dropdown-item:active {
+    background-color: #f8f9fa;
+    color: black;
+  }
+
   .dropdown-item:target{
     background-color: #c0c0c0;
   }
@@ -77,7 +81,9 @@
     height: 2px;
     background-color: black;
     transition: width 0.3s ease-in-out; 
-    border: 0 0 0 0;
+    border-top: none;
+    border-right: none;
+    border-left: none;
   }
   
   .navbar-nav .nav-link:hover::after {
