--- a/src/assets/css/UseofCookiesPage.css
+++ b/src/assets/css/UseofCookiesPage.css
@@ -22,6 +22,24 @@
     text-decoration: underline;
 }
 
+#accept-button {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+#accept-button:hover {
+    background-color: #45a049;
+}
+
 .button-container {
     display: flex;
     justify-content: center;
@@ -44,4 +62,25 @@
 
 .accept-button:hover, .reject-button:hover {
     background-color: #45a049;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Yarı saydamlık eklemek için */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    color: #fff;
+    font-size: 24px;
+    text-align: center;
+}
+
+.overlay p {
+    margin-bottom: 20px;
 }
