--- a/src/assets/css/Slider.css
+++ b/src/assets/css/Slider.css
@@ -1,46 +1,45 @@
-/* Slider konteynırı için stiller */
 .slider-container {
-  max-width: 800px; /* Slider'ın maksimum genişliği */
-  margin: 0 auto; /* Ortalıyor */
+  max-width: 800px; 
+  margin: 0 auto; 
 }
 
-/* Slaytlar için stiller */
+
 .slider-image {
-  width: 100%; /* Resimlerin genişliği %100 olacak şekilde ayarlanır */
-  border-radius: 8px; /* Köşeleri yumuşat */
-  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1); /* Slayt gölgesi */
-  transition: transform 0.3s ease; /* Dönüş animasyonu */
+  width: 100%; 
+  border-radius: 8px;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1); 
+  transition: transform 0.3s ease; 
 }
 
 .slider-image:hover {
-  transform: scale(1.05); /* Fare üstüne gelince büyütme animasyonu */
+  transform: scale(1.05); 
 }
 
-/* Noktalar için stiller */
+
 .slick-dots {
-  text-align: center; /* Noktaları ortala */
-  margin-top: 20px; /* Üst boşluk */
+  text-align: center; 
+  margin-top: 20px; 
 }
 
 .slick-dots li {
-  display: inline-block; /* Noktaları yan yana göster */
-  margin: 0 5px; /* Noktalar arasında boşluk bırak */
+  display: inline-block; 
+  margin: 0 5px; 
 }
 
 .slick-dots li button {
-  font-size: 0; /* Nokta metni gizle */
-  width: 10px; /* Nokta boyutu */
+  font-size: 0; 
+  width: 10px; 
   height: 10px;
-  border-radius: 50%; /* Noktanın kenarını yuvarla */
-  background-color: #888; /* Nokta rengi */
-  cursor: pointer; /* İmleci göster */
-  transition: background-color 0.3s ease; /* Renk değişim animasyonu */
+  border-radius: 50%; 
+  background-color: #888; 
+  cursor: pointer; 
+  transition: background-color 0.3s ease; 
 }
 
 .slick-dots li button:hover {
-  background-color: #333; /* Üzerine gelince renk değiştir */
+  background-color: #333; 
 }
 
 .slick-dots li.slick-active button {
-  background-color: #333; /* Aktif nokta rengi */
+  background-color: #333; 
 }
